2000-06-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: added checks for range restrictions applied
	to enumeration types.

	* test/: adjusted LIBSMI-TEST-* mibs and dumps/ files to
	satisfy the test suite.
	
	* lib/parser-smi.y: fixed crashes in case of lowercase identifier
	DEFVALs for objects that are neither enums nor oids. Thanks to
	Bill Fenner.

	* lib/parser-smi.y (checkObjects): fixed crashes in case of
	unknown oids.

	* lib/smi.c (smiGetNextNode): fixed segfault caused by missing
	modules.

	* tools/dump-jax.c (dumpScalars): fixed setScalar OID check.
	Thanks to Bill Rizzi.

2000-06-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/: minor patches from Juergen.

	* tools/dump-types.c: dumping also implicit types.

	* mibs/ietf/ and mibs/iana: various MIB module updates.

	* mibs/ietf/RMON-MIB: updated RMON-MIB (RFC 2819).

2000-06-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y (checkObjects): fixed endless loop, as
	occuring in original Modem-MIB for mdmMIB (RFC 1696).

	* mibs/ietf/: added FIBRE-CHANNEL-FE-MIB.

2000-05-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Juergen added code for checks of inherited
	types.

2000-05-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-cm.c: changed dump driver calling conventions
	from Juergen. dump-cm patch from Andreas.

2000-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.1.tar.gz: released version 0.2.1.

2000-05-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-metrics.c: New output format supplied by Juergen.
	It prints metrics of MIB modules.

2000-05-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c (printNotifications): fixed determination of
	the ENTERPRISE object. Thanks to Ira Wolf.

	* tools/dump-smi.c (getOidString): fixed printing of OIDs with
	a length of 2. Thanks to Ira Wolf.

	* test/Makefile.am: removed GNU specific diff options
	from check scripts.
